2007-08-28  Marius Vollmer  <marius.vollmer@nokia.com>

	* utils/maemo-select-menu-location-main.c,
	utils/maemo-select-menu-location: New.
	* utils/Makefile.am: Build and install them.

2007-08-22  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 1.9.20
	
	Work around a osso-backup limitations.
	
	* src/confutils.h (BACKUP_CATALOGUES2): New.
	* src/confutils.cc (backup_catalogues): Write the catalogues into
	two files.
	* src/hildon-application-manager-util: Added restore-catalogues2
	subcommand.
	* hildon-application-manager.sudoers: Allow it.
	* hildon-application-manager.sh: Handle catalogues2.backup file.

	* src/hildon-application-manager-config.cc (element_description):
	Handle localized name elements.

	* src/search.cc (show_search_dialog_flow): Set default response
	(N58335).

	* utils/maemo-confirm-text-user.c (_): Use
	"hildon-application-manager" text domain instead of
	osso-application-installer.

	* src/confutils.h (BACKUP_CATALOGUES, BACKUP_PACKAGES,
	get_backup_catalogues): Moved here from apt-worker.cc.
	(backup_catalogues): New.
	* src/apt-worker.cc (cmd_save_backup_data): Call it instead of
	doing it explicitly.
	* src/hildon-application-manager.cc (update_conf): Call
	backup_catalogues (N64617).
	
	* src/instr.cc (convert_compatibility_catalogue): Removed "dist"
	parameter, se "filter_dist" element of catalogue xexps is not used
	anymore.
	(convert_compatibility_catalogues): Filter out unsuitable
	compatibility catalogues here (N64802).

	* src/repo.cc (cat_row_activated): Ignore read-only catalogues.

	* src/main.cc (search_packages_reply): Only search the first
	section to avoid duplicate results.

	* src/operations.cc: (install_packages): Make sure that we have
	the package info also for single package confirmations (N64800).
	(ip_confirm_with_info): New.
	
2007-08-21  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/operations.cc (up_remove): Use correct logical id.
	(ip_check_cert_reply): Likewise.
