@@ -1,7 +1,7 @@
 bin_PROGRAMS = hildon-application-manager.launch \
                hildon-application-manager-config
 dist_bin_SCRIPTS = hildon-application-manager-util
-noinst_PROGRAMS = hildon-application-manager.run mime-open mime-server
+noinst_PROGRAMS = hildon-application-manager.run mime-open mime-server test-app-killer
 libexec_PROGRAMS = apt-worker
 
 hildon_application_manager_launch_SOURCES = main.h			\
@@ -78,6 +78,11 @@ mime_server_SOURCES = mime-server.c
 mime_server_CFLAGS =   $(HAM_DEPS_CFLAGS)
 mime_server_CXXFLAGS = $(HAM_DEPS_CFLAGS)
 mime_server_LDADD =    $(HAM_DEPS_LIBS)
+
+test_app_killer_SOURCES = test-app-killer.c
+test_app_killer_CFLAGS = $(HAM_DEPS_CFLAGS)
+test_app_killer_CXXFLAGS = $(HAM_DEPS_CFLAGS)
+test_app_killer_LDADD = $(HAM_DEPS_LIBS)
 
 EXTRA_DIST = export.map
 
